# elite-engineers_advent-of-ai_2025_01

./: .chat_history.sqlite  .gitignore  Dockerfile  README.md  agent.py  agent_assistant.py  agent_chat.py  agent_chat_ollama.py  agent_chat_voice.py  agent_codefix.py  agent_multi.py  agent_run_tests.py  function_broken.py  function_broken.py.bak  mcp_server.py  mcp_servers.json  personalization.txt  pyproject.toml
tests/: test_function.py  test_function_deepseek_deepseek-r1:free_1_err.py  test_function_deepseek_deepseek-r1:free_2.py  test_function_mistralai_mistral-small-3.2-24b-instruct:free_2_err.py  test_function_moonshotai_kimi-dev-72b_free.py  test_function_x-ai_grok-3-mini.py
