[project]
name = "elite-engineers-advent-of-ai-2025-01"
version = "0.1.0"
description = "AI agent that generates tests for a specified Python file using LangChain and runs them in a local Docker container."
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.11.3",
    "langchain>=0.2.16",
    "langchain-openai>=0.3.32",
    "langgraph>=0.2.36",
    "pytest>=8.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "mcp[cli]>=1.13.1",
    "httpx>=0.28.1",
    "langchain-ollama>=0.1.0",
]
